// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialButton component Should match the snapshot 1`] = `
<DocumentFragment>
  .Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-stroked-neutral___U5syT {
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-700);
  color: var(--qtm-colors-neutral-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.c2 {
  display: inline-block;
}

.c0 {
  width: 40px;
  height: 40px;
  border-radius: 9px;
  cursor: pointer;
  overflow: hidden;
  outline: none;
}

.c1 {
  padding: 7px;
}

<button
    class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-stroked-neutral___U5syT Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-neutral-900___RMGup Button-module__shadow-4-neutral-700___qtCCL Button-module__shadow-8-neutral-900___ocRS3 c0 c1"
    type="button"
  >
    <svg
      aria-labelledby="google-title"
      class="c2"
      height="24"
      id="Google_Icon"
      role="img"
      version="1.1"
      viewBox="0 0 128 128"
      width="24"
      xml:space="preserve"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <title
        id="google-title"
      >
        google-button
      </title>
      <g
        id="_x31__stroke"
      >
        <g
          id="Google"
        >
          <rect
            clip-rule="evenodd"
            fill="none"
            fill-rule="evenodd"
            height="128"
            width="128"
          />
          <path
            clip-rule="evenodd"
            d="M27.585,64c0-4.157,0.69-8.143,1.923-11.881L7.938,35.648    C3.734,44.183,1.366,53.801,1.366,64c0,10.191,2.366,19.802,6.563,28.332l21.558-16.503C28.266,72.108,27.585,68.137,27.585,64"
            fill="#FBBC05"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M65.457,26.182c9.031,0,17.188,3.2,23.597,8.436L107.698,16    C96.337,6.109,81.771,0,65.457,0C40.129,0,18.361,14.484,7.938,35.648l21.569,16.471C34.477,37.033,48.644,26.182,65.457,26.182"
            fill="#EA4335"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M65.457,101.818c-16.812,0-30.979-10.851-35.949-25.937    L7.938,92.349C18.361,113.516,40.129,128,65.457,128c15.632,0,30.557-5.551,41.758-15.951L86.741,96.221    C80.964,99.86,73.689,101.818,65.457,101.818"
            fill="#34A853"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M126.634,64c0-3.782-0.583-7.855-1.457-11.636H65.457v24.727    h34.376c-1.719,8.431-6.397,14.912-13.092,19.13l20.474,15.828C118.981,101.129,126.634,84.861,126.634,64"
            fill="#4285F4"
            fill-rule="evenodd"
          />
        </g>
      </g>
    </svg>
  </button>
</DocumentFragment>
`;

exports[`SocialButton component when provider prop is set to facebook 1`] = `
<DocumentFragment>
  .Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.c2 {
  display: inline-block;
}

.c0 {
  width: 40px;
  height: 40px;
  border-radius: 9px;
  cursor: pointer;
  overflow: hidden;
  outline: none;
}

.c1 {
  border: none;
  background-color: #3c5193;
  padding: 8px;
}

<button
    class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c0 c1"
    type="button"
  >
    <svg
      aria-labelledby="facebook-title"
      class="c2"
      height="24"
      role="img"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="facebook-title"
      >
        facebook-button
      </title>
      <g>
        <rect
          fill="none"
          height="402"
          id="canvas_background"
          width="582"
          x="-1"
          y="-1"
        />
      </g>
      <g>
        <path
          d="m13,10l3,0l0,3l-3,0l0,7l-3,0l0,-7l-3,0l0,-3l3,0l0,-1.255c0,-1.189 0.374,-2.691 1.118,-3.512c0.744,-0.823 1.673,-1.233 2.786,-1.233l2.096,0l0,3l-2.1,0c-0.498,0 -0.9,0.402 -0.9,0.899l0,2.101z"
          fill="#ffffff"
          id="svg_2"
        />
      </g>
    </svg>
  </button>
</DocumentFragment>
`;
